--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">💻</div>
         <div>
           <h1>Informatyka</h1>
-          <p class="muted">Instrukcje krok po kroku (prosto, dla 12+)</p>
+          <p class="muted">Instrukcje krok po kroku </p>
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
     <section class="hero">
       <div class="hero-card">
         <h2>Wybierz temat</h2>
-        <p class="muted">Dodawaj w przyszłości kolejne kafelki. Na razie jest jeden.</p>
+        <p class="muted">Zbiór instrukcji dla gimpa.</p>
       </div>
     </section>
 
