--- a/fotomontaz.html
+++ b/fotomontaz.html
@@ -30,7 +30,7 @@
     <section class="card">
       <h2>Co będzie potrzebne?</h2>
       <ul class="bullets">
-        <li>GIMP (program do grafiki)</li>
+        <li>GIMP </li>
         <li>2 zdjęcia: <strong>A</strong> (z obiektem) i <strong>B</strong> (tło)</li>
       </ul>
     </section>
