--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
         </div>
         <div class="tile-go">➡️</div>
       </a>
-
+<section class="grid">
+      <a class="tile" href="">
+        <div class="tile-icon">🖼️</div>
+        <div class="tile-text">
+          <div class="tile-title">PUSTY</div>
+          <div class="tile-sub">Instrukcja</div>
+        </div>
+        <div class="tile-go">➡️</div>
+      </a>
       <!--
         W przyszłości dodasz kolejne kafelki tak samo:
         <a class="tile" href="nazwa-strony.html">...</a>
